k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lastmission-frontend
  namespace: lastmission
spec:
  type: ClusterIP
  selector:
    app: lastmission-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
