k8s/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lastmission
  namespace: lastmission
spec:
  hostnames:
    - lastmission.coder-han.com
  parentRefs:
    - name: coder-han-gateway
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lastmission-frontend
          port: 80
